jss-compiler/tests/semantic_errors/invalid_main_signature.jss
function void main(int x) {}
